SDC-6025. Remove invalid Java opt MaxPermSize from surefire args
Change-Id: I9923e7614e8d8b4fdb92cd57349c065768d8cddc
Reviewed-on: https://review.streamsets.net/8016
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Jarcec Cecho <jarcec@streamsets.com>