@@ -64,7 +64,7 @@
     <jersey.version>2.23.1</jersey.version>
     <jackson.version>2.4.3</jackson.version>
     <!-- Sets the VM argument line used when unit and integration tests are run. -->
-    <argLine>-Xmx2G -XX:MaxPermSize=256M</argLine>
+    <argLine>-Xmx2g</argLine>
     <testcontainers.version>1.1.8</testcontainers.version>
     <netty.version>4.0.41.Final</netty.version>
 
